--- a/public/html/pinup.html
+++ b/public/html/pinup.html
@@ -19,8 +19,7 @@
                   <reminder></reminder>
 
                   <!-- collaborator icon -->
-                  <i id="collaborator" style="margin-left:8px;cursor:pointer;" class="fa fa-user-plus" style="font-size:36px;" aria-hidden="true"  ng-click="collaborator(x);" uib-tooltip="Collaborator"  tooltip-placement="bottom" tooltip-append-to-body="true">
-                  </i>
+                   <collaborator></collaborator>
 
                     <!-- color  directive -->
                    <color></color>
